feature(aws): add SQS integration; New logos/favicons; Updates openapi.yaml